--- a/index.html
+++ b/index.html
@@ -23,17 +23,18 @@
               <h2> Другие навыки и увлечения:</h2>
               <ul>
               <li> Занимаюсь волейболом (КМС) </li>
-              <li> Увлекаюсь киберспортом, а именно Dota 2 </li>
+              <li> Увлекаюсь киберспортом, а имеено Dota 2 </li>
               <li> Люблю читать книги серии S.T.A.L.K.E.R </li>
             </ul>
 
 
         </div>
             <div id="footer">
-                <p>  Семенов Сергей
-                    <br> Москва, Василисы Кожиной 1,
+              <p> <br> Семенов Сергей, 
+<a href="mailto:semenov.s@roistat.com">semenov.s@roistat.com </a>89169014855, Москва, Василисы Кожиной 1,
             </div>
     </body>
 
 
 <!-- END -->
+
